--- a/home.hbs
+++ b/home.hbs
@@ -16,12 +16,12 @@
                             </a>
                             <p class="gh-home-description">{{@site.description}}</p>
                         </div>
-                        <button class="gh-search gh-icon-btn" aria-label="Search this site" data-ghost-search>{{> "icons/search"}}</button>
+                        <button class="gh-search gh-icon-btn" aria-label="{{t "Search this site"}}" data-ghost-search>{{> "icons/search"}}</button>
                     </header>
 
                     <section class="gh-home-subscribe">
-                        <h2 class="gh-home-subscribe-title">Stay tuned</h2>
-                        <p class="gh-home-subscribe-description">Don’t miss out on the latest issues. Sign up now to get access to the library of members-only issues.</p>
+                        <h2 class="gh-home-subscribe-title">(t "Stay tuned")</h2>
+                        <p class="gh-home-subscribe-description">(t "Don’t miss out on the latest issues. Sign up now to get access to the library of members-only issues.")</p>
                         <a class="gh-home-subscribe-input" href="#/portal/signup" data-portal="signup">
                             jamie@example.com <span>{{> icons/arrow-right}}</span>
                         </a>
@@ -72,14 +72,14 @@
                             </article>
 
                             <footer class="gh-home-latest-footer">
-                                <a class="gh-btn" href="{{url}}">Read latest issue</a>
+                                <a class="gh-btn" href="{{url}}">(t "Read latest issue")</a>
                             </footer>
                         {{/foreach}}
                     </section>
 
                     <div class="gh-home-latest-label">
                         <span class="gh-home-latest-indicator"></span>
-                        Latest issue
+                        (t "Latest issue")
                     </div>
                 </div>
             </div>
